<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="100dp"
    android:gravity="center_horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bg_green"
    tools:context=".HomeFragment">



    <androidx.cardview.widget.CardView
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center">
                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:src="@drawable/ic_round_soil"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="2dp"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/soilEn"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_home_soilfz"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/nol"
                        android:textAlignment="center"
                        android:textSize="20sp" />
                    <TextView
                        android:id="@+id/tv_home_soil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textColor="#000"
                        android:textStyle="bold"
                        android:text="@string/nol"/>
                    <TextView
                        android:id="@+id/tv_home_soildt"
                        android:background="@drawable/ripple_text_green"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:clickable="true"
                        android:text="@string/detail"
                        android:textColor="@color/colorPrimary"
                        android:textAllCaps="true"
                        android:textStyle="bold"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center">
                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:src="@drawable/ic_round_temp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:gravity="center_vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tempEn"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/tv_home_tempfz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:text="@string/nol"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/tv_home_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textColor="#000"
                        android:textStyle="bold"
                        android:text="@string/nol"/>
                    <TextView
                        android:id="@+id/tv_home_tempdt"
                        android:background="@drawable/ripple_text_green"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:clickable="true"
                        android:text="@string/detail"
                        android:textColor="@color/colorPrimary"
                        android:textAllCaps="true"
                        android:textStyle="bold"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <View
        android:layout_marginTop="10dp"
        android:layout_width="360dp"
        android:layout_height="1dp"
        android:background="#fff" />

    <RelativeLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="10dp"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_home_auto"
                    android:clickable="true"
                    android:background="@drawable/ripple_text_green"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorPrimary"
                    android:text="Auto Watering"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:focusable="true" />
                <View
                    android:layout_marginHorizontal="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />
                <TextView
                    android:id="@+id/tv_home_auto_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000"
                    android:textStyle="italic"
                    android:text="off"
                    android:textAllCaps="true"
                    android:textSize="16sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="10dp"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_home_last"
                    android:clickable="true"
                    android:background="@drawable/ripple_text_green"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorPrimary"
                    android:text="Last Watering"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:focusable="true" />
                <View
                    android:layout_marginHorizontal="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />
                <TextView
                    android:id="@+id/tv_home_last_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000"
                    android:textStyle="italic"
                    android:text="5000 mL"
                    android:textSize="16sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </RelativeLayout>



</LinearLayout>